
syntax = "proto3";
package definicion;

// Interface exported by the server.
service ServicioTareas {
    // A simple RPC.
    //
    // Obtains the feature at a given position.
    //
    // A feature with an empty name is returned if there's no feature at the given
    // position.
    rpc GetTask(Id) returns (Task) {}

    rpc ListTasks(User) returns (stream Task) {}

    rpc AddTask(Task) returns (Id) {}

    // A client-to-server streaming RPC.
    //
    // Accepts a stream of Points on a route being traversed, returning a
    // RouteSummary when traversal is completed.
    //rpc RecordRoute(stream Point) returns (RouteSummary) {}

    // A Bidirectional streaming RPC.
    //
    // Accepts a stream of RouteNotes sent while a route is being traversed,
    // while receiving other RouteNotes (e.g. from other users).
    //rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
}




message Id {
    uint32 id = 1;
}

message User {
    string name = 1;
}


message Task {
    uint32 id = 1;
    string title = 2;
    repeated Tag tags = 3;
}

message Tag {
    uint32 id = 1;
    string name = 2;

}